fixed image out of bound issue

--- a/assets/scss/templates/_main.scss
+++ b/assets/scss/templates/_main.scss
@@ -92,6 +92,11 @@
     margin-bottom: 20px;
   }
 
+  img{
+    max-width: 100%;
+    height: auto;
+  }
+
   h1,
   h2,
   h3,
